feat: allow inviting members to groups
