# app/Models/Group.php
@@ -6,6 +6,7 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
 class Group extends Model
@@ -39,5 +40,11 @@ class Group extends Model
     public function tasks(): BelongsToMany
     {
         return $this->belongsToMany(Task::class)->withTimestamps();
+    }
+
+    /** @return HasMany<GroupInvitation, $this> */
+    public function invitations(): HasMany
+    {
+        return $this->hasMany(GroupInvitation::class);
     }
 }
